# irix

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: problem-solution.yml  summary.yml
.github/workflows/: ci.yml  msrv.yml
crates/irix-core/: Cargo.toml  README.md
crates/irix-core/src/: lib.rs
src/: lib.rs
